# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  20 Aug 2012; Fabian Groffen <grobian@gentoo.org> portage-2.2.01.20837.ebuild:
  Up the requirement for bash to 4.1, since redirect_alloc_fd better relies on
  bash' built-in to find a free filedescriptor than a rather Linux-specific way
  to figure one out.

  12 Aug 2012; Fabian Groffen <grobian@gentoo.org> portage-2.2.01.20837.ebuild:
  Add sys-devel/patch to DEPEND for bug #429746

  12 Aug 2012; Fabian Groffen <grobian@gentoo.org> portage-2.2.01.20837.ebuild:
  Remove /etc/make.globals symlink code (bug #427862)

*portage-2.2.01.20837 (12 Aug 2012)

  12 Aug 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20837.ebuild,
  -portage-2.2.01.20430.ebuild:
  Version bump, matches 2.2.0_alpha121

*portage-2.2.01.20796 (19 Jul 2012)

  19 Jul 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20796.ebuild,
  -portage-2.2.01.20389.ebuild:
  Version bump, matches v2.2.0_alpha120

*portage-2.2.01.20757 (08 Jul 2012)

  08 Jul 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20757.ebuild:
  Version bump, matches portage-2.2.0_alpha116+

*portage-2.2.01.20430 (23 Apr 2012)

  23 Apr 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20430.ebuild,
  -portage-2.2.01.20271.ebuild, portage-2.2.01.20366.ebuild,
  portage-2.2.01.20389.ebuild:
  Version bump, matches 2.2.0_alpha101

*portage-2.2.01.20389 (03 Apr 2012)

  03 Apr 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20389.ebuild,
  -portage-2.2.01.20239.ebuild:
  Version bump, matches v2.2.0_alpha99+

*portage-2.2.01.20366 (31 Mar 2012)

  31 Mar 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20366.ebuild,
  -portage-2.2.01.20153.ebuild:
  Version bump, matches 2.2.0_alpha96+

*portage-2.2.01.20271 (01 Mar 2012)

  01 Mar 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20271.ebuild,